# AzureVirtualMachineResourceModule

./: .gitignore  .pylintrc  README.md  pyproject.toml
module_virtual_machine/entities/: virtual_machine_model.py
module_virtual_machine/infra/: authenticate.py  azure_cloud_services.py  config.py
module_virtual_machine/services/: virtual_machine_services.py
module_virtual_machine/utils/: exception.py  type_validation.py
tests/: conftest.py  test_azure_cloud_services.py
